# Basic-VS-Launcher

./: Cargo.toml  README.md
src/: main.rs
src/pages/: home.rs  instances.rs  mod.rs  mods.rs  versions.rs
